src/test/ui/feature-gates/feature-gate-c_ffi_const.stderr
error[E0658]: the `#[c_ffi_const]` attribute is an experimental feature (see issue #58328)
  --> $DIR/feature-gate-c_ffi_const.rs:5:5
   |
LL |     #[c_ffi_const] //~ ERROR the `#[c_ffi_const]` attribute is an experimental feature (see issue #58328)
   |     ^^^^^^^^^^^^^^
   |
   = help: add #![feature(c_ffi_const)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
